src/components/welcome/welcome-block/welcome-block.module.scss
.welcomeBlock {
  display: flex;
  overflow: hidden;
  position: relative;
  align-items: center;
  justify-content: center;
  font-family: 'Roboto', 'Times New Roman', Times, serif;
  height: 100vh;
  .imageBlock {
    width: 47vw;
    position: relative;
    left: -27%;
    filter: drop-shadow(20px 15px 10px rgb(0, 0, 0, 0.5));
    .image {
      overflow: hidden;
      width: 100%;
      animation: rotatePlanet 70s linear infinite;
    }
  }
  .welcomeContent {
    padding: 20px;
    .h1::before {
      content: 'GraphiQL';
      font-size: 5em;
      font-weight: 900;
      position: absolute;
      top: 150px;
      color: rgb(208, 197, 212);
      z-index: 2;
      background-color: #2aa5a0;
      background-image: linear-gradient(90deg, #e353c4, #2aa5a0);
      background-clip: text;
      -webkit-text-fill-color: transparent;
      -webkit-background-clip: text;
      text-shadow: 3px -2px 5px rgba(255, 255, 255, 0.2352941176);
      -webkit-text-stroke: 0.3px #ffffff;
    }
    .header {
      margin-bottom: 20px;
    }
  }
}

.navigation {
  display: flex;
  gap: 20px;
}
@keyframes rotatePlanet {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (max-width: 900px) {
  .welcomeBlock {
    .imageBlock {
      width: 100vw;
      left: -20%;
    }
    .welcomeContent {
      .h1::before {
      top: 100px;
        font-size: 3em;
      }
    }
  }
}

@media (max-width: 600px) {
  .welcomeBlock {
    height: 80vh;
    .imageBlock {
      display: none;
      opacity: 0;
    }
    .welcomeContent {
      .h1::before {
      top: 70px;
        font-size: 3em;
      }
      .header {
        margin-bottom: 20px;
      }
    }
  }
}

